embed-works/ufys-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ufys
  labels:
    app: embed.works
    component: ufys
spec:
  replicas: 1
  selector:
    matchLabels:
      app: embed.works
      component: ufys
  template:
    metadata:
      labels:
        app: embed.works
        component: ufys
    spec:
      containers:
        - name: ufys
          image: ghcr.io/jemand771/ufys:br-main
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: web
