embed-works/aaas-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: aaas
spec:
  selector:
    app: embed.works
    component: aaas
  ports:
    - port: 80
      name: web
      targetPort: web
