embed-works/networkpolicy.yaml
# thanks, marie
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ufys-antileak
  namespace: embed-works
spec:
  podSelector:
    matchLabels:
      app: embed.works
      component: ufys
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 80
        - port: 443
        - port: 53
          protocol: UDP
    - to:
        - namespaceSelector: { }
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: tempo
              app.kubernetes.io/component: distributor
      ports:
        - port: 4318
          protocol: TCP
